--- a/index.html
+++ b/index.html
@@ -37,7 +37,19 @@
           <p class="college-name native">भारतीय सूचना प्रौद्योगिकी संस्थान श्री सिटी, चित्तूर</p>
           <p class="college-tagline">(An Institute of National Importance under an Act of Parliament)</p>
         </div>
-        <div id="header-clock" class="digital-clock"></div>
+        <div class="header-controls">
+          <div id="header-clock" class="digital-clock"></div>
+          <button id="themeToggle" class="theme-toggle" aria-label="Toggle dark mode">
+            <svg class="sun-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+              <circle cx="12" cy="12" r="5" />
+              <path
+                d="M12 1v2M12 21v2M4.22 4.22l1.42 1.42M18.36 18.36l1.42 1.42M1 12h2M21 12h2M4.22 19.78l1.42-1.42M18.36 5.64l1.42-1.42" />
+            </svg>
+            <svg class="moon-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+              <path d="M21 12.79A9 9 0 1 1 11.21 3 7 7 0 0 0 21 12.79z" />
+            </svg>
+          </button>
+        </div>
       </div>
     </header>
 
