--- a/index.html
+++ b/index.html
@@ -31,7 +31,6 @@
             <path d="M5 12h14M12 5l7 7-7 7" />
           </svg>
         </button>
-        <button id="exitBtn" class="exit-button hidden">Exit</button>
       </div>
     </div>
   </div>
@@ -76,7 +75,7 @@
         </div>
         <div class="hero-actions">
           <button class="cta" type="button" id="heroBrowse">Browse PYQs</button>
-          <a href="exxam schedule.pdf" target="_blank" class="cta secondary" id="viewSchedule">View Schedule</a>
+          <a href="examschedule.pdf" target="_blank" class="cta secondary" id="viewSchedule">View Schedule</a>
         </div>
       </section>
 
@@ -102,8 +101,30 @@
     </main>
 
     <footer class="footer">
-      <p>This website is a personal project and is not officially affiliated with IIIT Sri City. All materials are
-        provided for academic reference only.</p>
+      <p>This website is not officially affiliated with IIIT Sri City and is maintained as a personal initiative. If you
+        find it helpful, optional donations are welcome to support maintenance and future updates.</p>
+      <div class="footer-actions">
+        <a href="https://docs.google.com/forms/d/17HqbLayU2L9KxYmEOpTQJJ0nKTYJ__NhVaVZ29-65Zc/edit" target="_blank"
+          rel="noopener noreferrer" class="submit-pyq-button">
+          <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
+            stroke-linecap="round" stroke-linejoin="round">
+            <path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z"></path>
+            <polyline points="14 2 14 8 20 8"></polyline>
+            <line x1="12" y1="18" x2="12" y2="12"></line>
+            <line x1="9" y1="15" x2="15" y2="15"></line>
+          </svg>
+          Submit PYQ
+        </a>
+        <a href="https://razorpay.me/@pyqsbypa" target="_blank" rel="noopener noreferrer" class="contribute-button">
+          <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
+            stroke-linecap="round" stroke-linejoin="round">
+            <path
+              d="M20.84 4.61a5.5 5.5 0 0 0-7.78 0L12 5.67l-1.06-1.06a5.5 5.5 0 0 0-7.78 7.78l1.06 1.06L12 21.23l7.78-7.78 1.06-1.06a5.5 5.5 0 0 0 0-7.78z">
+            </path>
+          </svg>
+          Contribute
+        </a>
+      </div>
     </footer>
 
   </div>
